# ha_components

./: AGENTS.md  README.md  hacs.json  main.py  pyproject.toml  pyrightconfig.json
.zed/: debug.json  tasks.json
custom_components/eloverblik/: __init__.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  sensor.py
custom_components/eloverblik/energinet/: client.py  models.py
custom_components/eloverblik/translations/: en.json
src/eloverblik/: __init__.py  manifest.json  sensor.py
src/eloverblik/energinet/: client.py  models.py
